defconfig: add this thing for system trusted keys
Change-Id: Icd51bb124209e36b3857a25489fed0d26d2c4c1a
Signed-off-by: Simao Gomes Viana <xdevs23@outlook.com>

--- a/arch/arm64/configs/cheeseburger_defconfig
+++ b/arch/arm64/configs/cheeseburger_defconfig
@@ -5197,3 +5197,4 @@ CONFIG_UCS2_STRING=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+CONFIG_SYSTEM_TRUSTED_KEYS="verity.x509.pem"
