op5: defconfig: enable nfc
Change-Id: Ia92086ff5c363668047d1b742418e86131b5b349
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/arch/arm64/configs/cheeseburger_defconfig
+++ b/arch/arm64/configs/cheeseburger_defconfig
@@ -1081,7 +1081,7 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
-# CONFIG_NFC is not set
+CONFIG_NFC=y
 CONFIG_NXP_NFC_I2C=y
 # CONFIG_NXP_NFC_SPI is not set
 CONFIG_NFC_NQ=y
