Build wlan into kernel binary
Change-Id: I70e18c6ae7c3690de663a3b3fc8022e57a2d5e34

--- a/arch/arm64/configs/cheeseburger_defconfig
+++ b/arch/arm64/configs/cheeseburger_defconfig
@@ -1718,7 +1718,7 @@ CONFIG_ATH_CARDS=y
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 # CONFIG_WIL6210_WRITE_IOCTL is not set
@@ -3929,7 +3929,7 @@ CONFIG_ION_MSM=y
 #
 # Qualcomm Atheros CLD WLAN module
 #
-CONFIG_QCA_CLD_WLAN=m
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
