oneplus5: Update defconfig
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-sigmaKernel-v10.1"
+CONFIG_LOCALVERSION="-sigmaKernel-v11.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -425,6 +425,8 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=240
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -515,7 +517,7 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
+# CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
 
 #
 # Boot options
@@ -3954,6 +3956,7 @@ CONFIG_SW_SYNC=y
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
 # CONFIG_ANDROID_VSOC is not set
+# CONFIG_SYNC_DEBUG is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
@@ -4223,6 +4226,10 @@ CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=4173
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
@@ -4928,7 +4935,7 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
+# CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
 CONFIG_SECURITY_SMACK=y
