fs: add CONFIG_FS_SYSCTL_PROTECTED_*
https://github.com/anthraxx/linux-hardened/commit/d410a4d63ac5a661bf3af57b3842a97ef14f0e59
Signed-off-by: Simao Gomes Viana <devel@superboring.dev>

This is the commit message #2:

fs: Kconfig: change CONFIG_FS_SYSCTL_PROTECTED_* type

as per https://github.com/anthraxx/linux-hardened/commit/a40d346ce6febd497888c188a4af014b7302dfe1

Signed-off-by: Simao Gomes Viana <devel@superboring.dev>

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -73,6 +73,22 @@ config FILE_LOCKING
           for filesystems like NFS and for the flock() system
           call. Disabling this option saves about 11k.
 
+config FS_SYSCTL_PROTECTED_SYMLINKS
+    bool "Enable sysctl protected symlinks"
+    default n
+
+config FS_SYSCTL_PROTECTED_HARDLINKS
+    bool "Enable sysctl protected hardlinks"
+    default n
+
+config FS_SYSCTL_PROTECTED_FIFOS
+    int "Enable sysctl protected fifos"
+    default 0
+
+config FS_SYSCTL_PROTECTED_REGULAR
+    int "Enable sysctl protected regular files"
+    default 0
+
 source "fs/crypto/Kconfig"
 
 source "fs/notify/Kconfig"
