--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.214 Kernel Configuration
+# Linux/arm64 4.4.215 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -328,11 +328,11 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_CFQ_GROUP_IOSCHED is not set
 CONFIG_IOSCHED_BFQ=y
-CONFIG_BFQ_GROUP_IOSCHED=y
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_BFQ_GROUP_IOSCHED is not set
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
-# CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_NOOP=y
+CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -1298,6 +1298,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
