dts: msm8998-cheeseburger: HACK: Keep power domains enabled!
This should be helpful at least during the initial phases of the display
panel driver development process.

Signed-off-by: Simao Gomes Viana <xdevs23@outlook.com>

--- a/arch/arm64/boot/dts/qcom/msm8998-cheeseburger.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8998-cheeseburger.dtsi
@@ -26,7 +26,7 @@
 		stdout-path = "display0";
 
 		// Without "clk_ignore_unused" in cmdline the kernel panics during late init
-		bootargs = "earlycon clk_ignore_unused";
+		bootargs = "earlycon clk_ignore_unused pd_ignore_unused";
 
 		/*
 		 * hack: Use framebuffer setup by the bootloader for simplefb.
