dts: msm8998-dumpling: Disable MDSS, MDP & DSI nodes for now
There isn't a generated panel driver (yet) for the Samsung S6E3FC1 found
on the 5T so we should disable all of these nodes as to not try and use
the OnePlus 5's Samsung S6E3FA5 panel here.

Signed-off-by: Simao Gomes Viana <xdevs23@outlook.com>

--- a/arch/arm64/boot/dts/qcom/msm8998-dumpling.dts
+++ b/arch/arm64/boot/dts/qcom/msm8998-dumpling.dts
@@ -26,3 +26,21 @@
 &rmi4_f12 {
 	touchscreen-y-mm = <137>;
 };
+
+// Disable all display panel related nodes until there is a proper driver to
+// test for the Samsung S6E3FC1 found on the 5T
+&mdss {
+	status = "disabled";
+};
+
+&mdss_mdp {
+	status = "disabled";
+};
+
+&dsi0_phy {
+	status = "disabled";
+};
+
+&dsi0 {
+	status = "disabled";
+};
