dts: msm8998-cheeseburger: Stop disabling unused clocks!
Using "clk_ignore_unused" in cmdline makes the kernel not panic during
late init! :)

I'll have to investigate further what to do about this later.

Signed-off-by: Simao Gomes Viana <xdevs23@outlook.com>

--- a/arch/arm64/boot/dts/qcom/msm8998-cheeseburger.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8998-cheeseburger.dtsi
@@ -14,6 +14,9 @@
 
 	chosen {
 		stdout-path = "serial0:115200n8";
+
+		// Without "clk_ignore_unused" in cmdline the kernel panics during late init
+		bootargs = "earlycon clk_ignore_unused";
 	};
 
 	vph_pwr: vph-pwr-regulator {
