--- a/arch/arm64/boot/dts/qcom/msm8998.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8998.dtsi
@@ -4,6 +4,7 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/clock/qcom,gcc-msm8998.h>
 #include <dt-bindings/clock/qcom,gpucc-msm8998.h>
+#include <dt-bindings/clock/qcom,mmcc-msm8998.h>
 #include <dt-bindings/clock/qcom,rpmcc.h>
 #include <dt-bindings/power/qcom-rpmpd.h>
 #include <dt-bindings/gpio/gpio.h>
@@ -1969,6 +1970,68 @@
 			status = "disabled";
 			#address-cells = <1>;
 			#size-cells = <0>;
+		};
+
+		mmcc: clock-controller@c8c0000 {
+			compatible = "qcom,mmcc-msm8998";
+			#clock-cells = <1>;
+			#reset-cells = <1>;
+			#power-domain-cells = <1>;
+			reg = <0x0c8c0000 0x40000>;
+
+			clocks = <&rpmcc RPM_SMD_XO_CLK_SRC>,
+			         <&gcc GPLL0_OUT_MAIN>,
+			         <0>,
+			         <0>,
+			         <0>,
+			         <0>,
+			         <0>,
+			         <0>,
+			         <0>;
+			clock-names = "xo",
+			              "gpll0",
+			              "dsi0dsi",
+			              "dsi0byte",
+			              "dsi1dsi",
+			              "dsi1byte",
+			              "hdmipll",
+			              "dpvco",
+			              "dplink";
+		};
+
+		mmss_smmu: arm,smmu@cd00000 {
+			compatible = "qcom,msm8998-smmu-v2", "qcom,smmu-v2";
+			reg = <0x0cd00000 0x40000>;
+			#iommu-cells = <1>;
+
+			#global-interrupts = <0>;
+			interrupts = <GIC_SPI 263 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 266 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 267 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 268 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 244 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 245 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 247 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 248 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 249 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 250 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 251 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 252 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 253 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 254 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 255 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 256 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 260 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 261 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 262 IRQ_TYPE_LEVEL_HIGH>,
+			             <GIC_SPI 272 IRQ_TYPE_LEVEL_HIGH>;
+
+			power-domains = <&mmcc BIMC_SMMU_GDSC>;
+
+			clocks = <&mmcc MNOC_AHB_CLK>,
+			         <&mmcc BIMC_SMMU_AHB_CLK>,
+			         <&mmcc BIMC_SMMU_AXI_CLK>;
+			clock-names = "noc", "iface", "bus";
 		};
 
 		remoteproc_adsp: remoteproc@17300000 {
