iodine-apple_defconfig: regenerate defconfig
Change-Id: I1fea1690a2d683c4c987240c421eee1feaab8bbf

--- a/arch/arm64/configs/iodine-apple_defconfig
+++ b/arch/arm64/configs/iodine-apple_defconfig
@@ -1016,6 +1016,7 @@ CONFIG_NET_SCH_MULTIQ=y
 # CONFIG_NET_SCH_PIE is not set
 CONFIG_NET_SCH_INGRESS=y
 # CONFIG_NET_SCH_PLUG is not set
+# CONFIG_NET_SCH_DEFAULT is not set
 
 #
 # Classification
