drivers: clk: msm: add config for msm clk debug
Change-Id: If7dc93225cf67ddb66f6347d52e8fc90f01cd437

--- a/drivers/clk/msm/Kconfig
+++ b/drivers/clk/msm/Kconfig
@@ -9,6 +9,13 @@ config COMMON_CLK_MSM
 	  Say Y if you want to support the clocks exposed by the MSM on
 	  platforms such as msm8996, msm8998 etc.
 
+config COMMON_CLK_MSM_DEBUG
+    bool "MSM clock debug"
+    default n
+    depends on COMMON_CLK_MSM
+    help
+      Only enable this if you know what this does.
+
 config MSM_CLK_CONTROLLER_V2
 	bool "QTI clock driver"
 	depends on COMMON_CLK_MSM
